Use Java 21 and remove stats scraping completely. (#10)
* Use Java 21 and remove stats scraping completely.

* Make models and parsing more resilient to broken data.

* Cleanup and minor fixes.

* Add FilesService tests.

* Remove unused property.

* Download player image only if it is not the default image.

* Copy default image from disk instead of from resources.

* Fix color and flag file copy.

* Add (some) club flags to team resources.

* Try to copy club flag (if it exists) for every team color created instead of listing resources in path.

* Don't compute batting stats without ABs/PAs.

* Don't drop first letter when avg and ops is greater than 1.

* Remove old outdated comment.

* Add more flags.

* Add FIN team color.

* Bugfix: don't count sac fly as fly out.

* Set default pitch count to 0.

* Bugfix: unbox optionals before writing the values.